# dataclean-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
dataclean_env/: env.py  models.py
dataclean_env/tasks/: __init__.py  task1_easy.py  task2_medium.py  task3_hard.py
server/: app.py
