[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dataclean-openenv"
version = "1.0.0"
description = "Real-world data cleaning environment for AI agents"
authors = [
    {name = "vaibhav6300"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.4",
    "pandas==2.2.1",
    "numpy==1.26.4",
    "openai==1.12.0",
    "requests==2.31.0",
    "huggingface_hub==0.21.4",
    "openenv-core",
]

[project.scripts]
server = "dataclean_env.env:app"

[project.urls]
Homepage = "https://huggingface.co/spaces/vaibhav6300/dataclean-openenv"